syntax = "proto3";
package action_requirement;

option go_package = "nfxid/protos/gen/access/action_requirement;actionrequirementpb";

import "google/protobuf/timestamp.proto";

message ActionRequirement {
  string id = 1;
  string action_id = 2;
  string permission_id = 3;
  int32 group_id = 4;
  google.protobuf.Timestamp created_at = 5;
}

service ActionRequirementService {
  rpc CreateActionRequirement (CreateActionRequirementRequest) returns (CreateActionRequirementResponse);
  rpc GetActionRequirementByID (GetActionRequirementByIDRequest) returns (GetActionRequirementByIDResponse);
  rpc GetByActionID (GetByActionIDRequest) returns (GetByActionIDResponse);
  rpc GetByPermissionID (GetByPermissionIDRequest) returns (GetByPermissionIDResponse);
  rpc DeleteActionRequirement (DeleteActionRequirementRequest) returns (DeleteActionRequirementResponse);
  rpc DeleteByActionIDAndPermissionID (DeleteByActionIDAndPermissionIDRequest) returns (DeleteByActionIDAndPermissionIDResponse);
  rpc DeleteByActionID (DeleteByActionIDRequest) returns (DeleteByActionIDResponse);
}

message CreateActionRequirementRequest {
  string action_id = 1;
  string permission_id = 2;
  int32 group_id = 3;
}

message CreateActionRequirementResponse {
  ActionRequirement action_requirement = 1;
}

message GetActionRequirementByIDRequest {
  string id = 1;
}

message GetActionRequirementByIDResponse {
  ActionRequirement action_requirement = 1;
}

message GetByActionIDRequest {
  string action_id = 1;
}

message GetByActionIDResponse {
  repeated ActionRequirement action_requirements = 1;
}

message GetByPermissionIDRequest {
  string permission_id = 1;
}

message GetByPermissionIDResponse {
  repeated ActionRequirement action_requirements = 1;
}

message DeleteActionRequirementRequest {
  string id = 1;
}

message DeleteActionRequirementResponse {}

message DeleteByActionIDAndPermissionIDRequest {
  string action_id = 1;
  string permission_id = 2;
}

message DeleteByActionIDAndPermissionIDResponse {}

message DeleteByActionIDRequest {
  string action_id = 1;
}

message DeleteByActionIDResponse {}
